Fix stacking on small screens.

--- a/assets/css/wooyellowcube.css
+++ b/assets/css/wooyellowcube.css
@@ -11,7 +11,7 @@
 }
 
 .wooyellowcube-middle-right{
-    width: 48%;
+    width: 47%;
     float: right;
     display: inline;
     padding: 10px;
